[gd_scene load_steps=11 format=3 uid="uid://f383ubqkk2aq"]

[ext_resource type="Shader" path="res://Artwork/Shader/blur.gdshader" id="1_r2c8n"]
[ext_resource type="Script" path="res://Skripts/UI/pauseMenu.gd" id="2_28jwd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ly2i3"]
shader = ExtResource("1_r2c8n")
blur = null
brightness = null

[sub_resource type="InputEventKey" id="InputEventKey_rytqd"]
device = -1
store_command = false
keycode = 16777217

[sub_resource type="Shortcut" id="Shortcut_exfw2"]
events = [SubResource("InputEventKey_rytqd")]

[sub_resource type="Animation" id="Animation_n6mxb"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:blur")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [null, 2.5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:brightness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [null, 1.0]
}

[sub_resource type="Animation" id="Animation_ib47m"]
resource_name = "PauseHard"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ggvek"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:blur")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:brightness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_xmrud"]
resource_name = "UnpauseHard"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l54ar"]
_data = {
"Pause": SubResource("Animation_n6mxb"),
"PauseHard": SubResource("Animation_ib47m"),
"Unpause": SubResource("Animation_ggvek"),
"UnpauseHard": SubResource("Animation_xmrud")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
visible = false
material = SubResource("ShaderMaterial_ly2i3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 1)
script = ExtResource("2_28jwd")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
offset_left = 352.0
offset_top = 184.0
offset_right = 608.0
offset_bottom = 355.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
offset_right = 256.0
offset_bottom = 171.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 155.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 224.0
offset_bottom = 26.0
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 224.0
offset_bottom = 34.0

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 38.0
offset_right = 224.0
offset_bottom = 69.0
shortcut = SubResource("Shortcut_exfw2")
text = "Resume"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 73.0
offset_right = 224.0
offset_bottom = 104.0
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 108.0
offset_right = 224.0
offset_bottom = 139.0
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_l54ar")
}
